--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin: "sunrise" # "air", "aqua", "contrast", "dark", "dirt", "n
 locale: "en-US"
 title: "Deeper"
 title_separator: "-"
-subtitle: "hello world" # site tagline that appears below site title in masthead
+subtitle: "bye bye" # site tagline that appears below site title in masthead
 name: "Changjin"
 description: "blog"
 url: "https://JasonLee-cp.github.io"
