--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
+minimal_mistakes_skin: "plum" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
 
 # Site Settings
 locale: "en-US"
@@ -101,11 +101,11 @@ analytics:
 
 # Site Author
 author:
-  name: "Changjin Lee"
+  name: "Jinwoo Ji"
   avatar: "/assets/images/IMG_0922.JPG"
   # bio: "What are you waiting for?"
   location: "South Korea"
-  email: "changjin9792@gmail.com"
+  email: "cream5343@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -134,7 +134,7 @@ footer:
     # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/jasonlee-cp"
+      url: "https://github.com/JiJinWoo"
 
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
