--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,9 @@ social:
 
 # Analytics
 analytics:
-  provider: "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider: "google" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id: "G-C3ZFDBS68L"
+    tracking_id: "G-HG37NKT26S"
     anonymize_ip: false # true, false (default)
 
 # Site Author
