--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name: "Jinwoo Ji"
-  avatar: "/assets/images/image.jpg"
+  avatar: "/assets/images/blog/image.jpg"
   # bio: "What are you waiting for?"
   location: "South Korea"
   email: "cream5343@gmail.com"
